# maisha

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  AGENT_PLAYBOOK.md  AUTHORING_PLAYBOOK.md  BENCHMARK-SUITE-REPORT.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  COVERAGE.md  Dockerfile  INSTALL.md  LICENSE  README.md  RULESET-EXPANSION.md  SECURITY.md  SENTINEL-C-IMPROVEMENT-REPORT.md  VALIDATION.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  rule_or_pattern_request.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml
benchmark/: ground_truth.json  run_accuracy_benchmark.py  run_cli_and_edge_cases.py  run_loop_simulation.py  run_realworld_benchmark.py  run_sarif_import_test.py  synthetic_qualified_engine.sarif.json
benchmark/corpora/: CLONE.sh
benchmark/firmware/: fw_types.h  motor_control.c  motor_control.h  uart_driver.c  uart_driver.h
benchmark/fixtures/: 01_string_handling.c  02_register_driver.c  03_state_machine.c  04_memory_and_signals.c  05_float_and_int_edge_cases.c  06_preprocessor_heavy.c  07_clean_reference.c
benchmark/results/: accuracy_run.json  cli_edge_perf_summary.json  loop_simulation_transcript.txt  realworld_run.json
benchmark/stubs/: setjmp.h  signal.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
examples/: bad.c
integrations/: README.md  claude-code.mcp.json  cursor.mcp.json  generic-mcp.json
maishac/: __init__.py  __main__.py  cli.py  coverage.py  doctor.py  mcp_server.py  model.py  patterns.py  report.py
maishac/analyzers/: __init__.py  base.py  clang_tidy.py  compiler.py  cppcheck.py  native.py
maishac/engine/: __init__.py
maishac/memory/: __init__.py
maishac/rules/: __init__.py  barr_c_2018.json  cert_c.json  misra_c_2012.json
sentinelc/: __init__.py  cli.py  mcp_server.py  model.py  report.py
sentinelc/analyzers/: __init__.py  native.py
sentinelc/engine/: __init__.py
sentinelc/memory/: __init__.py
sentinelc/rules/: __init__.py  cert_c.json
tests/: test_adapters.py  test_benchmark_fixes.py  test_check_snippet.py  test_cli_e2e.py  test_compiler_adapter.py  test_concurrency.py  test_cppcheck_cert_map.py  test_doctor.py  test_fuzz_native.py  test_gep_grp.py  test_mandatory_rules.py  test_mcp_server.py  test_misra_compliance.py  test_misra_section20.py  test_pathological.py  test_patterns.py  test_sarif_dialects.py  test_sarif_import.py  test_sarif_schema.py  test_smoke.py  test_toolchain_disclosure.py  test_verification_gate.py
tests/fixtures/: cppcheck_2.17_sample.sarif.json  pathological.c
tools/: fp_check.py  gen_coverage.py
